# tokenvibes

./: .env  .vercel-deploy-trigger  .vercelignore  ARCHIVE-WORKING-VERSION.md  CLEAN-STRUCTURE.md  DEPLOYMENT-GUIDE.md  README.md  SUPABASE-SETUP.md  VERCEL-DEPLOYMENT-ISSUES-RESOLVED.md  index.html  package-lock.json  package.json  server.js  vercel.json  verify-deployment.js
ARCHIVE-Working-Retro-Cloud-Version/: ARCHIVE-README.md  README.md  package.json  server.js  setup.sh
browser-version/: index.html  vercel.json
contracts/token-sale/: README.md
nodejs-version/: .env.example  .gitignore  README.md  SUPABASE-SETUP.md  SUPABASE-VERCEL-FIX.md  package-lock.json  package.json  setup-supabase.sh  supabase-setup-fixed.sql  vercel.json
nodejs-version/contracts/token-sale/: Cargo.toml
nodejs-version/contracts/token-sale/src/: lib.rs
nodejs-version/public/: app-v10.js  app.js  index.html
nodejs-version/src/: database.js  server.js  tokenCreator.js
nodejs-version/src/routes/: tokenRoutes.js
public/: admin.html  app-v10.js  app-v11.js  app.js  index-new.html  index.html
src/: database.js  server.js  tokenCreator.js
src/routes/: tokenRoutes.js
